# DCConcretos

./: .gitignore  DcConcretos.sln  Directory.Build.props  README.md
.github/workflows/: build.yml
batch-cli/: .gitignore  README.md  env.example  pyproject.toml
batch-cli/src/dcconcretos_cli/: __init__.py  __main__.py  config.py  sql_ping.py
batch-cli/tests/: test_config.py
docs/: PERF-AND-DEPLOYMENT.md  red-acceso-sql-oficina.md
docs/dcconcretos-rebuild/: 00-executive-summary.md  01-environment-inventory.md  02-architecture-and-integration.md  03-binary-analysis-notes.md  03b-ilspy-export-notes.md  04-data-dictionary-comercial.md  05-concept-mapping.md  06-user-journeys-and-ui-map.md  07-batch-input-spec.md  08-sql-inventory.md  09-validation-protocol.md  10-rebuild-specification.md  11-risks-and-dependencies.md  PHASE2-KICKOFF.md  README.md
docs/dcconcretos-rebuild/appendix-diagrams/: README.md  architecture.mmd  batch-flows.mmd
docs/dcconcretos-rebuild/artifacts/: ConceptosEstadoCuentaProveedor.txt  DCConcretosWF.exe.config.SANITIZED.example.xml  (+1 more)
src/DcConcretos.Application/: DcConcretos.Application.csproj
src/DcConcretos.Desktop/: App.xaml  App.xaml.cs  DcConcretos.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs  appsettings.json
src/DcConcretos.Infrastructure/: DcConcretos.Infrastructure.csproj
src/DcConcretos.Integrations.Comercial/: DcConcretos.Integrations.Comercial.csproj
tests/DcConcretos.Tests/: BatchWriterStubTests.cs  ConceptoCodesParserTests.cs  DcConcretos.Tests.csproj  SqlScriptDeploymentTests.cs
tools/: Run-SchemaValidation.ps1
(+20 files in other folders)
