[project]
name = "dcconcretos-cli"
version = "0.1.0"
description = "CLI ligero para conexión SQL y futuras cargas en lote (CONTPAQi Comercial)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
sql = ["pyodbc>=5.1"]
dev = ["pytest>=8.0"]

[project.scripts]
dcconcretos = "dcconcretos_cli.__main__:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
